[gd_scene load_steps=10 format=3 uid="uid://bqtglccugsck5"]

[ext_resource type="Script" uid="uid://cfte7dgoq2g6i" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://c6qbxv0cxeij3" path="res://scenes/background/scroller.tscn" id="2_tipki"]
[ext_resource type="PackedScene" uid="uid://cjj4nsedbqtrk" path="res://scenes/ship.tscn" id="3_ship"]
[ext_resource type="PackedScene" uid="uid://b6cfliqwjj6w" path="res://scenes/hud/hud.tscn" id="4_hud"]
[ext_resource type="PackedScene" path="res://scenes/enemy_spawner.tscn" id="5_spawner"]
[ext_resource type="PackedScene" uid="uid://d1376mvun472t" path="res://scenes/pickup_spawner.tscn" id="6_pickup_spawner"]
[ext_resource type="Script" uid="uid://p0syo11s83jy" path="res://scripts/ui/main_menu.gd" id="7_main_menu"]
[ext_resource type="Script" uid="uid://d1alwvtsoq0c6" path="res://scripts/ui/game_over.gd" id="8_game_over"]
[ext_resource type="Script" uid="uid://ew6y0y1obkvt" path="res://scripts/ui/high_scores.gd" id="9_high_scores"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="BackgroundScroller" parent="." instance=ExtResource("2_tipki")]

[node name="Ship" parent="." instance=ExtResource("3_ship")]
position = Vector2(512, 600)

[node name="HUD" parent="." instance=ExtResource("4_hud")]

[node name="EnemySpawner" parent="." instance=ExtResource("5_spawner")]

[node name="PickupSpawner" parent="." instance=ExtResource("6_pickup_spawner")]

[node name="MainMenu" type="CanvasLayer" parent="."]
script = ExtResource("7_main_menu")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SPACE SHOOTER"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "START GAME"

[node name="HighScoresButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "HIGH SCORES"

[node name="QuitButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "QUIT"

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("8_game_over")

[node name="CenterContainer" type="CenterContainer" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Wave: 1"
horizontal_alignment = 1

[node name="EnterNameLabel" type="Label" parent="GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "ENTER YOUR INITIALS"
horizontal_alignment = 1

[node name="NameEntryContainer" type="HBoxContainer" parent="GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Letter1" type="Label" parent="GameOver/CenterContainer/VBoxContainer/NameEntryContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "A"
horizontal_alignment = 1

[node name="Letter2" type="Label" parent="GameOver/CenterContainer/VBoxContainer/NameEntryContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "A"
horizontal_alignment = 1

[node name="Letter3" type="Label" parent="GameOver/CenterContainer/VBoxContainer/NameEntryContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "A"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOver/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="GameOver/CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "MAIN MENU"

[node name="HighScores" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("9_high_scores")

[node name="CenterContainer" type="CenterContainer" parent="HighScores"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HighScores/CenterContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="HighScores/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "HIGH SCORES"
horizontal_alignment = 1

[node name="ScoreListContainer" type="VBoxContainer" parent="HighScores/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Score1" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 1. ---  -----"
horizontal_alignment = 1

[node name="Score2" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 2. ---  -----"
horizontal_alignment = 1

[node name="Score3" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 3. ---  -----"
horizontal_alignment = 1

[node name="Score4" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 4. ---  -----"
horizontal_alignment = 1

[node name="Score5" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 5. ---  -----"
horizontal_alignment = 1

[node name="Score6" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 6. ---  -----"
horizontal_alignment = 1

[node name="Score7" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 7. ---  -----"
horizontal_alignment = 1

[node name="Score8" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 8. ---  -----"
horizontal_alignment = 1

[node name="Score9" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = " 9. ---  -----"
horizontal_alignment = 1

[node name="Score10" type="Label" parent="HighScores/CenterContainer/VBoxContainer/ScoreListContainer"]
layout_mode = 2
text = "10. ---  -----"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="HighScores/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "BACK"
